# warsaw_real_estate

./: README.md  pyproject.toml
datasources/: warsaw_real_estate.csv
notebooks/: historical_modelling.ipynb  mortgage.ipynb  warsaw_real_estate.ipynb
